done with scroll and data fetch

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <h1 id ="discription"></h1>
         </div>
         <div class="banner-fade">
-
         </div>
     </header>
 
@@ -61,6 +60,22 @@
     <div class="mrow" id ="mrow7">
         <h2>Documanteris</h2>
         <div class="imga-con" id ="imga7"></div>
+    </div>
+    <!-- copyrights -->
+    <div id ="con" class="con">
+        <div id ="movpos">
+            <img id ="movposimg" src ="" alt ="">
+        </div>
+        <div class ="details">
+            <h2 id ="titlee"></h2>
+            <div class="smalldetails">
+                <p id ="date"></p>
+                <p id ="lan"></p>
+                <p id ="rating"></p>
+            </div>
+            <h1 id ="disc"></h1>
+            <button id ="play">play</button>
+        </div>
     </div>
     <script src ="script.js"></script>
 </body>
