completed le clone

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <div class="banner-fade">
         </div>
     </header>
-
     <!-- movierows    01 -->
     <div class="mrow" id ="mrow0">
         <h2>Netflix Original</h2>
@@ -76,6 +75,7 @@
             <h1 id ="disc"></h1>
             <button id ="play">play</button>
         </div>
+        <button id ="close">X</button>
     </div>
     <script src ="script.js"></script>
 </body>
