--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- navbar -->
+    <nav class=" navbar">
+        <ul>
+            <img src="https://i.ibb.co/r5krrdz/logo.png" alt=""  id ="logo"width="9%" />
+            <li><a href="#profile">MYPROFILE</a></li>
+            <li><a href="#search">SEARCH</a></li>
+            <li><a href="#mylist">MYLIST</a></li>
+            <li><a href="#movies">MOVIES</a></li>
+            <li><a href="#home">HOME</a></li>                
+        </ul>
+    </nav>
     <!-- headerss -->
     <header id = "banner">
         <div class = "banner-content" id ="banner-content">
