added interface page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href ="style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>NETFLIX</title>
 </head>
 <body>
     <!-- navbar -->
     <nav class=" navbar">
         <ul>
-            <img src="https://i.ibb.co/r5krrdz/logo.png" alt=""  id ="logo"width="9%" />
+            <a href="#banner"> <img src="https://i.ibb.co/r5krrdz/logo.png"  alt=""  id ="logo"width="9%" /></a>
             <li><a href="#profile">MYPROFILE</a></li>
             <li><a href="#search">SEARCH</a></li>
             <li><a href="#mylist">MYLIST</a></li>
